# LikeMinds

./: .gitignore  README.md  main.py  pyproject.toml
data/: user_likes.csv
notebooks/: jschdvtrsh.py
src/likeminds/api/: bluesky_api.py
src/likeminds/recommendation/: blind_spot.py  filter_science.py  filter_science_domain.py  recommender.py  recommender_bert.py  recommender_word2vec.py
src/likeminds/web/: app.py  app_functions.py
src/recommendation/: filter.py
src/web/: app.py
