[project]
name = "likeminds"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "atproto>=0.0.59",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "scikit-surprise>=1.1.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
